Implement delete_file_core_non_posix

--- a/vm/devices/support/fs/lxutil/Cargo.toml
+++ b/vm/devices/support/fs/lxutil/Cargo.toml
@@ -43,6 +43,17 @@ features = [
     "winsock2",
 ]
 
+[target.'cfg(windows)'.dependencies.windows]
+package = "windows_rs"
+workspace = true
+features = [ 
+    "Wdk_Storage_FileSystem",
+    "Wdk_System_SystemServices",
+    "Win32_Foundation", 
+    "Win32_Storage_FileSystem", 
+    "Win32_System_IO",
+]
+
 [dev-dependencies]
 tempfile.workspace = true
 
