Implement LxUtilDelete functions and replace their usages

--- a/vm/devices/support/fs/lxutil/Cargo.toml
+++ b/vm/devices/support/fs/lxutil/Cargo.toml
@@ -21,6 +21,7 @@ tracing.workspace = true
 libc.workspace = true
 
 [target.'cfg(windows)'.dependencies]
+bitfield-struct.workspace = true
 ntapi.workspace = true
 parking_lot.workspace = true
 widestring.workspace = true
