Implement QueryStat functions

--- a/vm/devices/support/fs/lxutil/Cargo.toml
+++ b/vm/devices/support/fs/lxutil/Cargo.toml
@@ -48,12 +48,16 @@ features = [
 [target.'cfg(windows)'.dependencies.windows]
 workspace = true
 features = [ 
+    "Wdk_Foundation",
     "Wdk_Storage_FileSystem",
     "Wdk_System_SystemServices",
     "Win32_Foundation", 
+    "Win32_Security", 
     "Win32_Storage_FileSystem", 
     "Win32_System_IO",
+    "Win32_System_Kernel",
     "Win32_System_SystemServices",
+    "Win32_System_Threading",
 ]
 
 [dev-dependencies]
