--- a/vm/devices/support/fs/lxutil/Cargo.toml
+++ b/vm/devices/support/fs/lxutil/Cargo.toml
@@ -56,6 +56,7 @@ features = [
     "Win32_Security", 
     "Win32_Storage_FileSystem", 
     "Win32_System_IO",
+    "Win32_System_Ioctl",
     "Win32_System_Kernel",
     "Win32_System_SystemServices",
     "Win32_System_Threading",
