--- a/vm/devices/support/fs/lxutil/Cargo.toml
+++ b/vm/devices/support/fs/lxutil/Cargo.toml
@@ -51,12 +51,14 @@ features = [
     "Wdk_Foundation",
     "Wdk_Storage_FileSystem",
     "Wdk_System_SystemServices",
+    "Wdk_System_Threading",
     "Win32_Foundation", 
     "Win32_Security", 
     "Win32_Storage_FileSystem", 
     "Win32_System_IO",
     "Win32_System_Ioctl",
     "Win32_System_Kernel",
+    "Win32_System_Memory",
     "Win32_System_SystemServices",
     "Win32_System_Threading",
 ]
