Add Win32_Security feature to pal

--- a/support/pal/Cargo.toml
+++ b/support/pal/Cargo.toml
@@ -23,7 +23,6 @@ pal_event.workspace = true
 ntapi = { workspace = true, features = ["impl-default"] }
 socket2 = { workspace = true, features = ["all"] }
 widestring.workspace = true
-windows = { workspace = true, features = ["Wdk_Foundation", "Win32_Foundation"] }
 
 [target.'cfg(windows)'.dependencies.winapi]
 workspace = true
@@ -50,6 +49,14 @@ features = [
     "winioctl",
     "winnt",
     "winsock2",
+]
+
+[target.'cfg(windows)'.dependencies.windows]
+workspace = true
+features = [
+    "Wdk_Foundation", 
+    "Win32_Foundation",
+    "Win32_Security"
 ]
 
 [target.'cfg(unix)'.dependencies]
