underhill_core: factory for nvme devices + tests for nvme_manager (#1787)

--- a/openhcl/underhill_core/Cargo.toml
+++ b/openhcl/underhill_core/Cargo.toml
@@ -173,6 +173,7 @@ firmware_pcat.workspace = true
 
 [dev-dependencies]
 guest_emulation_transport = { workspace = true, features = ["test_utilities"] }
+test_with_tracing.workspace = true
 
 [build-dependencies]
 build_rs_guest_arch.workspace = true
