nvme_test: added handler and resolver for the NvmeFaultController (#1890)
[bug fix] The resolver in the `nvme_test` crate should resolve the
`NvmeFaultController` type. This was a bug during the initial push to
the nvme_test crate.
For now the behavior of the NvmeFaultControllerHandler is scoped to a
no-fault behavior. Support for defining faults in the vmm test will be
coming in a follow up PR

--- a/openvmm/openvmm_resources/Cargo.toml
+++ b/openvmm/openvmm_resources/Cargo.toml
@@ -57,6 +57,7 @@ vmcore.workspace = true
 # PCI devices
 gdma.workspace = true
 nvme.workspace = true
+nvme_test.workspace = true
 
 # SCSI
 scsidisk.workspace = true
