nvme_test: Moving the fault structs for the fault controller to nvme_resources (#1903)
Fault structs need to be consumed by the NvmeFaultControllerHandler
system for the vmm tests I am writing. Adding the fault structs to the
Handler right now causes a circular dependency (nvme_test depends on
nvme_resources). This fixes the dependency issue, unblocking development
for future vmm tests

--- a/vm/devices/storage/disk_nvme/nvme_driver/Cargo.toml
+++ b/vm/devices/storage/disk_nvme/nvme_driver/Cargo.toml
@@ -37,6 +37,7 @@ scsi_buffers.workspace = true
 test_with_tracing.workspace = true
 user_driver_emulated_mock.workspace = true
 nvme_test.workspace = true
+nvme_resources.workspace = true
 async-trait.workspace = true
 
 guid.workspace = true
