vbs: Enable get attestation report (#1872)
This PR plumbs the (extended) hypercall for get VBS report and enables
attestation path for VBS.
With the VBS attestation support, the PR also adds the VMM test for VBS
that exercises the boot-time SKR path.

---------

Signed-off-by: Ming-Wei Shih <mishih@microsoft.com>

--- a/openvmm/openvmm_resources/Cargo.toml
+++ b/openvmm/openvmm_resources/Cargo.toml
@@ -75,7 +75,7 @@ virtio_pmem.workspace = true
 
 # Vmbus devices
 guest_crash_device.workspace = true
-guest_emulation_device.workspace = true
+guest_emulation_device = { workspace = true, features = ["test_igvm_agent"] }
 guest_emulation_log.workspace = true
 hyperv_ic.workspace = true
 netvsp.workspace = true
