--- a/vm/devices/get/guest_emulation_device/Cargo.toml
+++ b/vm/devices/get/guest_emulation_device/Cargo.toml
@@ -8,6 +8,7 @@ rust-version.workspace = true
 
 [features]
 test_utilities = ["dep:disklayer_ram"]
+test_igvm_agent = ["dep:aes-kw", "dep:base64", "dep:sha1", "dep:sha2", "dep:rsa"]
 
 [dependencies]
 get_protocol.workspace = true
@@ -34,11 +35,16 @@ pal_async.workspace = true
 task_control.workspace = true
 tracelimit.workspace = true
 
+aes-kw = { workspace = true, optional = true }
+base64 = { workspace = true, optional = true }
 futures.workspace = true
 parking_lot.workspace = true
 serde_json.workspace = true
+sha1 = { workspace = true, optional = true }
+sha2 = { workspace = true, optional = true }
 thiserror.workspace = true
 jiff.workspace = true
+rsa = { workspace = true, optional = true }
 tracing.workspace = true
 zerocopy.workspace = true
 guid.workspace = true
