--- a/openhcl/openhcl_attestation_protocol/Cargo.toml
+++ b/openhcl/openhcl_attestation_protocol/Cargo.toml
@@ -11,6 +11,7 @@ open_enum.workspace = true
 guid.workspace = true
 mesh.workspace = true
 x86defs.workspace = true
+hvdef.workspace = true
 
 base64.workspace = true
 base64-serde.workspace = true
