--- a/vm/devices/storage/nvme_spec/Cargo.toml
+++ b/vm/devices/storage/nvme_spec/Cargo.toml
@@ -10,6 +10,7 @@ rust-version.workspace = true
 storage_string.workspace = true
 
 inspect.workspace = true
+mesh.workspace = true
 
 bitfield-struct.workspace = true
 open_enum.workspace = true
