Repo: Update our dependencies (#1920)
Came out pretty clean in terms of code changes, hopefully the binary
size gate likes it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -402,7 +402,7 @@ async-trait = "0.1"
 awaitgroup = "0.7"
 base64 = "0.22.1"
 base64-serde = "0.8"
-bitfield-struct = "0.10.1"
+bitfield-struct = "0.11.0"
 bitvec = { version = "1.1", default-features = false }
 blocking = "1.2"
 caps = "0.5"
@@ -411,8 +411,8 @@ cc = "1.0"
 cfg-if = "1"
 clap = "4.2"
 crc32fast = { version = "1.3.2", default-features = false }
-criterion = { version = "0.5", default-features = false }
-crossterm = "0.28.1"
+criterion = { version = "0.7", default-features = false }
+crossterm = { version = "0.29.0", default-features = false }
 ctrlc = "3.4.0"
 der = "0.7"
 dirs = "6.0"
@@ -422,7 +422,7 @@ env_logger = "0.11.7"
 event-listener = "5.3"
 expect-test = "1.5"
 fatfs = { version = "0.3.6", default-features = false }
-filepath = "0.1"
+filepath = "0.2"
 fs-err = "3.1"
 fscommon = "0.1.1"
 futures = "0.3.31"
@@ -435,7 +435,7 @@ gdbstub = "0.6"
 gdbstub_arch = "0.2"
 getrandom = "0.3"
 glob = "0.3"
-gptman = "1.0"
+gptman = "2.0"
 grep-regex = "0.1"
 grep-searcher = "0.1"
 h2 = "0.4"
@@ -460,7 +460,7 @@ igvm_defs = {git = "https://github.com/microsoft/igvm", rev = "365065d7e31da0a01
 image = { version = "0.25.1", default-features = false }
 io-uring = "0.7.4"
 jiff = "0.2.14"
-kvm-bindings = "0.11.1"
+kvm-bindings = "0.14.0"
 # Use of these specific REPO will go away when changes are taken upstream.
 landlock = "0.4.1"
 libc = "0.2"
@@ -470,14 +470,14 @@ linkme = "0.3.9"
 log = "0.4"
 loom = "0.7.2"
 macaddr = "1.0"
-mbrman = "0.5"
+mbrman = "0.6"
 mimalloc = { version = "0.1.39", default-features = false }
 ms-tpm-20-ref = { version = "0.1", git = "https://github.com/microsoft/ms-tpm-20-ref-rs.git", branch = "main" }
-mshv-bindings = "0.3.4"
-mshv-ioctls = "0.3.4"
-nix = { version = "0.27", default-features = false }
+mshv-bindings = "0.6.0"
+mshv-ioctls = "0.6.0"
+nix = { version = "0.30.1", default-features = false }
 ntapi = "0.4"
-object = { version = "0.36.7", default-features = false }
+object = { version = "0.37.3", default-features = false }
 once_cell = "1.7"
 openssl = "0.10.72"
 openssl-sys = "0.9"
@@ -487,7 +487,7 @@ pbjson = "0.5"
 pbjson-build = "0.5"
 pbjson-types = "0.5"
 pcap-file = "2.0.0"
-petgraph = "0.7.1"
+petgraph = "0.8.0"
 proc-macro2 = "1.0"
 prost = "0.11"
 prost-build = "0.11"
@@ -498,9 +498,9 @@ rayon = "1.5"
 resolv-conf = "0.7"
 rlimit = "0.10.1"
 rsa = "0.9.8"
-rusqlite = "0.34"
+rusqlite = "0.37"
 rustc-hash = "2.1.1"
-rustyline = "13"
+rustyline = "17"
 seccompiler = "0.5"
 serde = "1.0.185"
 serde_json = "1.0"
@@ -521,30 +521,30 @@ target-lexicon = "0.13.2"
 tempfile = "3.2"
 thiserror = { version = "2", default-features = false }
 time = "0.3"
-toml_edit = "0.22"
+toml_edit = "0.23"
 tracing = "0.1"
 tracing-core = "=0.1.30" # Pin to avoid binary size increase https://github.com/tokio-rs/tracing/issues/3182
 tracing-subscriber = "0.3.16"
-typed-path = "0.10"
-uefi = "0.34.1"
+typed-path = "0.11"
+uefi = "0.35.0"
 unicycle = "0.10.2"
 urlencoding = "2.1.3"
 vergen = "8.2"
-vfio-bindings = "0.3.1"
+vfio-bindings = "0.4.0"
 walkdir = "2.3"
 wchar = "0.11"
-which = "7"
+which = "8"
 widestring = "1.0"
 win_etw_tracing = "0.1.3"
 winapi = "0.3"
-windows = "0.59"
+windows = "0.61"
 windows-service = "0.8"
-windows-sys = "0.59"
+windows-sys = "0.60"
 windows-version = "0.1.4"
 xshell = "=0.2.2" # pin to 0.2.2 to work around https://github.com/matklad/xshell/issues/63
 xshell-macros = "0.2"
 # We add the derive feature here since the vast majority of our crates use it.
-zerocopy = { version = "0.8.14", features = ["derive"]}
+zerocopy = { version = "0.8.25", features = ["derive"]}
 
 [workspace.metadata.xtask.unused-deps]
 # Pulled in through "tracing", but we need to pin the version
