--- a/Cargo.toml
+++ b/Cargo.toml
@@ -455,8 +455,8 @@ iced-x86 = { version = "1.17", default-features = false, features = [
   "no_d3now",
 ] }
 ignore = "0.4"
-igvm = {git = "https://github.com/microsoft/igvm", rev = "365065d7e31da0a0116e7934de3ecd85f00bab70"}
-igvm_defs = {git = "https://github.com/microsoft/igvm", rev = "365065d7e31da0a0116e7934de3ecd85f00bab70", default-features = false, features = [ "unstable" ]}
+igvm = "0.4.0"
+igvm_defs = { version = "0.4.0", default-features = false }
 image = { version = "0.25.1", default-features = false }
 io-uring = "0.7.4"
 jiff = "0.2.14"
