--- a/vmm_tests/vmm_tests/Cargo.toml
+++ b/vmm_tests/vmm_tests/Cargo.toml
@@ -30,6 +30,7 @@ disk_backend_resources.workspace = true
 hyperv_ic_resources.workspace = true
 hvdef.workspace = true
 nvme_resources.workspace = true
+nvme_spec.workspace = true
 scsidisk_resources.workspace = true
 storvsp_resources.workspace = true
 vm_resource.workspace = true
