openhcl_boot: refactor address space management (#1754)
Over time, openhcl_boot has gotten more and more complicated with
different components carving out different sections of the address
space. In preparation for some future changes, refactor openhcl_boot to
have a central module responsible for managing and allocating address
space, and reporting information about the address space to the kernel.

This greatly simplifies address space management and makes it easier to
add new functionality in the future that requires new ranges.

--- a/openhcl/openhcl_boot/Cargo.toml
+++ b/openhcl/openhcl_boot/Cargo.toml
@@ -26,7 +26,9 @@ crc32fast.workspace = true
 # exception handler. Using the force-soft feature flag enables a software
 # implementation of the hashing algorithms that does not use cpuid.
 sha2 = { workspace = true, features = ["force-soft"] }
+thiserror.workspace = true
 zerocopy.workspace = true
+
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 safe_intrinsics.workspace = true
 tdcall.workspace = true
