--- a/openhcl/underhill_core/Cargo.toml
+++ b/openhcl/underhill_core/Cargo.toml
@@ -50,6 +50,7 @@ disk_get_vmgs.workspace = true
 disk_nvme.workspace = true
 firmware_uefi.workspace = true
 firmware_uefi_custom_vars.workspace = true
+gdma_defs.workspace = true
 hyperv_ic_guest.workspace = true
 hyperv_ic_resources.workspace = true
 hyperv_secure_boot_templates.workspace = true
@@ -108,6 +109,7 @@ vmbus_relay_intercept_device.workspace = true
 vmbus_serial_guest.workspace = true
 vmbus_server.workspace = true
 vpci.workspace = true
+vpci_relay.workspace = true
 watchdog_core.workspace = true
 watchdog_vmgs_format.workspace = true
 scsi_buffers.workspace = true
