--- a/vmm_tests/vmm_tests/Cargo.toml
+++ b/vmm_tests/vmm_tests/Cargo.toml
@@ -29,10 +29,12 @@ vtl2_settings_proto.workspace = true
 disk_backend_resources.workspace = true
 hyperv_ic_resources.workspace = true
 hvdef.workspace = true
+net_backend_resources.workspace = true
 nvme_resources.workspace = true
 nvme_spec.workspace = true
 scsidisk_resources.workspace = true
 storvsp_resources.workspace = true
+virtio_resources.workspace = true
 vm_resource.workspace = true
 
 guid.workspace = true
