ci: add ubuntu 2404 cvm tests (#1936)
Adds Ubuntu 24.04 CVM tests. These tests use 24.04 since our 22.04 image
doesn't boot properly in Hyper-V CVMs, and our 24.04 images doesn't boot
properly in OpenVMM VBS VMs. The guest crashes on TDX, so only enabling
for SNP and VBS for now.

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -40,6 +40,11 @@ store-success-output = "true"
 filter = 'test(loom)'
 slow-timeout = { period = "30s", terminate-after = 2 }
 
+# Reboot VMM tests take extra long
+[[profile.ci.overrides]]
+filter = 'package(~vmm_tests) & test(reboot)'
+slow-timeout = { period = "5m", terminate-after = 2 }
+
 [[profile.ci.overrides]]
 # use fuzzy-matching for the package() to allow out-of-tree tests to use the
 # same profile
