--- a/Cargo.toml
+++ b/Cargo.toml
@@ -612,6 +612,8 @@ bitvec = { git = "https://github.com/smalis-msft/bitvec", branch = "set-aliased-
 # Pending <https://github.com/influxdata/pbjson/pull/94>
 pbjson-build = { git = "https://github.com/jstarks/pbjson", branch = "aliases" }
 
+windows-link = { path = "windows-link" }
+
 [workspace.lints.rust]
 # Lint groups need a priority lower than individual lints so they get applied first.
 future_incompatible = { level = "deny", priority = -2 }
