--- a/petri/Cargo.toml
+++ b/petri/Cargo.toml
@@ -86,6 +86,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 
 [target.'cfg(windows)'.dependencies]
+disk_vhdmp.workspace = true
 windows-version.workspace = true
 
 [lints]
