vmgstool: recover if no space for new encryption key (#1958)
Unify the logic for updating the VMGS encryption key by moving the logic
into a new function in `vmgs_impl`. OpenHCL already had the logic for
recovering when adding a new key and there was already two datastore
keys, but this error was encountered when using VmgsTool. This can occur
if the previous add key operation failed mid-way through and we did not
remove the old key.

--- a/openhcl/underhill_attestation/Cargo.toml
+++ b/openhcl/underhill_attestation/Cargo.toml
@@ -38,6 +38,7 @@ zerocopy.workspace = true
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 disklayer_ram.workspace = true
 disk_backend.workspace = true
+vmgs = { workspace = true, features = ["encryption_ossl", "test_helpers"] }
 vmgs_format.workspace = true
 
 [lints]
