nvme: support multiple submission queues per completion queue (#1945)
The NVMe spec requires that multiple submission queues be able to target
the same completion queue. Initially we thought no guests really rely on
this, but it turns out that depending on the VM's topology, Windows
expects this to work.

Support this without adding extra synchronization--have a single task
own all submission queues that are tied to a single completion queue.
This limits CPU parallelism, but I don't really expect that to be the
bottleneck for common use cases, since this configuration implies the
guest has a single CPU handling completions anyway.

This change fixes Windows NVMe boot in various configurations.

--- a/vm/devices/storage/nvme/Cargo.toml
+++ b/vm/devices/storage/nvme/Cargo.toml
@@ -26,13 +26,15 @@ guid.workspace = true
 inspect.workspace = true
 mesh.workspace = true
 pal_async.workspace = true
+task_control.workspace = true
+tracelimit.workspace = true
+
 async-trait.workspace = true
 futures.workspace = true
 futures-concurrency.workspace = true
 parking_lot.workspace = true
-task_control.workspace = true
+slab.workspace = true
 thiserror.workspace = true
-tracelimit.workspace = true
 tracing.workspace = true
 unicycle.workspace = true
 zerocopy = { workspace = true, features = ["alloc"] }
