--- a/openhcl/openhcl_boot/Cargo.toml
+++ b/openhcl/openhcl_boot/Cargo.toml
@@ -17,6 +17,7 @@ hvdef.workspace = true
 fdt.workspace = true
 memory_range.workspace = true
 sidecar_defs.workspace = true
+string_page_buf.workspace = true
 
 arrayvec.workspace = true
 cfg-if.workspace = true
