attestation: enable end-to-end testing (#1963)
This PR enables end-to-end testing of the attestation flow (the
`initialize_platform_security` function) in the Rust unit test
framework. The summary of the changes is:
- Make changes that allows for enabling the test of
`initialize_platform_security` against test GED.
- Fix/improve the bug in the attestation module found by the tests
- Improve the logging
- Update the test igvm agent in the test GED to be more flexible on
supporting different test scenarios.
- Add basic test cases for `initialize_platform_security`. More can be
added in the follow-up PRs.

---------

Signed-off-by: Ming-Wei Shih <mishih@microsoft.com>

--- a/openhcl/underhill_attestation/Cargo.toml
+++ b/openhcl/underhill_attestation/Cargo.toml
@@ -40,6 +40,10 @@ disklayer_ram.workspace = true
 disk_backend.workspace = true
 vmgs = { workspace = true, features = ["encryption_ossl", "test_helpers"] }
 vmgs_format.workspace = true
+guest_emulation_transport = { workspace = true, features = ["test_utilities"] }
+guest_emulation_device = { workspace = true, features = ["test_igvm_agent"] }
+test_with_tracing.workspace = true
+user_driver_emulated_mock.workspace = true
 
 [lints]
 workspace = true
