--- a/vm/devices/get/guest_emulation_transport/Cargo.toml
+++ b/vm/devices/get/guest_emulation_transport/Cargo.toml
@@ -11,6 +11,7 @@ test_utilities = [ "guest_emulation_device/test_utilities" ]
 
 [target.'cfg(target_os = "linux")'.dependencies]
 get_protocol.workspace = true
+guestmem.workspace = true
 guest_emulation_device = { workspace = true, optional = true }
 hvdef.workspace = true
 underhill_config.workspace = true
@@ -43,7 +44,7 @@ zerocopy.workspace = true
 vmbus_user_channel.workspace = true
 
 [dev-dependencies]
-guest_emulation_device.workspace = true
+guest_emulation_device = { workspace = true, features = ["test_utilities"] }
 power_resources.workspace = true
 
 [lints]
